--- a/package.json
+++ b/package.json
@@ -6,9 +6,20 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
+    "bootstrap": "^5.1.1",
+    "leaflet": "^1.7.1",
+    "leaflet-draw": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.1",
+    "react-leaflet-draw": "^0.19.8",
+    "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
+    "reactstrap": "^8.10.0",
+    "styled-components": "^5.3.1",
+    "typescript": "^4.4.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -23,16 +34,15 @@
       "react-app/jest"
     ]
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "@types/leaflet": "^1.7.5",
+    "@types/leaflet-draw": "^1.0.5",
+    "@types/react": "^17.0.20",
+    "@types/styled-components": "^5.1.14"
   }
 }
