--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
     "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-leaflet": "^3.2.1",
     "react-leaflet-draw": "^0.19.8",
     "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "reactstrap": "^8.10.0",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.2",
